# agentcore-rig

./: .gitignore  README.md
.github/workflows/: deploy.yaml  publish.tmp  publish.yaml  publish_in_prog.yaml
ac-infra/: outputs.json  package-lock.json  package.json
ac-infra/lib/: ac-infra-stack.ts
ac-infra/test/: ac-infra.test.ts
agent/: Cargo.toml  Dockerfile  deploy.sh
agent/src/: credentials_provider.rs  main.rs
api/rig-agent/: bruno.json  collection.bru  invocation.bru
aws/ac-infra/: cdk-ecr-outputs.json  cdk.json
aws/ac-infra/lib/: ac-infra-stack.ts
aws/ac-runtime/: cdk.json  package-lock.json  package.json
aws/ac-runtime/lib/: ac-runtime-stack.ts
aws/ac-runtime/test/: ac-runtime.test.ts
