[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.10"
aws-sdk-bedrockruntime = "1.113.0"
aws-sdk-sts = "1.92.0"
axum = { version = "0.8.7", features = ["macros"] }
rig-bedrock = "0.3.6"
rig-core = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
