[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-config = "1.8.10"
aws-credential-types = "1.2.9"
aws-sdk-bedrockruntime = "1.113.0"
aws-sdk-sts = "1.92.0"
axum = { version = "0.8.7", features = ["macros"] }
chrono = "0.4.42"
reqwest = "0.12.24"
rig-bedrock = "0.3.6"
rig-core = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json"] }
